# tracker_system

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  build_files.sh  manage.py  package.json  pyproject.toml  railpack.json  railway.toml  requirements.txt  response.html  run_dev.bat  seed_data.py  vercel.json
accounts/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_profile_picture.py  0003_profile_profile_picture_data_and_more.py
admin_panel/: backup_utils.py  tests.py  urls.py  views.py
api/: serializers.py  urls.py  views.py
cargo/: admin.py  models.py  urls.py  views.py
cargo/migrations/: 0001_initial.py
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
core/: apps.py  cache_invalidation.py  cache_utils.py  decorators.py  middleware.py  models.py  pagination.py  signals.py  tests.py  utils.py
core/migrations/: 0001_initial.py
dashboard/: urls.py  views.py
drivers/: admin.py  models.py  urls.py  views.py
expenses/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
maintenance/: admin.py  models.py  urls.py  views.py
notifications/: admin.py  context_processors.py  models.py  urls.py  views.py
payments/: admin.py  models.py  urls.py  views.py
reports/: pdf_utils.py  urls.py  views.py
templates/: base.html  csrf_failure.html
tracker_system/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
trips/: admin.py  models.py  urls.py  views.py
trucks/: admin.py  models.py  urls.py  views.py
(+106 files in other folders)
