[project]
name = "tracker"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "Django==5.2.14",
  "dj-database-url==3.0.1",
   "djangorestframework==3.17.1",
   "djangorestframework-simplejwt==5.5.0",
   "django-ratelimit==4.1.0",
   "psycopg2-binary==2.9.11",
  "reportlab==4.5.1",
  "whitenoise==6.11.0",
]

[tool.vercel]
entrypoint = "tracker_system.wsgi:application"

[tool.vercel.scripts]
build = "python manage.py collectstatic --noinput"
